[package]
name = "vicente"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
xml-rs = "0.8"
reqwest = { version = "0.11", features = ["json", "rustls-tls", "blocking"] }
tokio = { version = "1", features = ["full"] }
lazy_static = "1.4"
actix-cors = "0.6"
chrono = "0.4"
